@@ -1,3 +1,5 @@
+	* fix issues when configured to use a non-default choking algorithm
+	* improve rate-based choker
 	* don't open any listen sockets if listen_interfaces is empty or misconfigured
 	* fix bug in auto disk cache size logic
 	* fix issue with outgoing_interfaces setting, where bind() would be called twice
